mobile updates, grid updates, content updates

--- a/src/sass/grid.module.scss
+++ b/src/sass/grid.module.scss
@@ -1,7 +1,13 @@
+@import 'variables';
+
 .grid {
   display:grid;
   grid-template-columns:1fr 1fr 1fr;
   grid-column-gap:15px;
+
+  @media screen and (max-width: #{$mobile_width}px) {
+    grid-template-columns:1fr 1fr;
+  }
 }
 
 @for $i from 1 through 3 {
