--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -1,4 +1,6 @@
+@import 'variables';
 .modal {
+  display:flex;
   position:fixed;
   height:100vh;
   width:100vw;
@@ -8,7 +10,12 @@
   align-items:center;
   justify-content:center;
   cursor:pointer;
+  padding:5vh 10vh;
   background-color:rgba(255,255,255,0.6);
+
+  @media screen and (max-width: #{$mobile_width}px) {
+    padding:5vh;
+  }
 
   &:after {
     content:'';
@@ -23,14 +30,18 @@
     background-size:contain;
     background-image:url('/icon-close.svg');
     opacity:0.6;
+
+    @media screen and (max-width: #{$mobile_width}px) {
+      right:3vh;
+      top:3vh;
+    }
   }
 
   img {
     display:block;
-    height:90vh;
-    width:auto;
-    max-width:95vw;
-    margin:5vh auto;
+    max-height:100%;
+    max-width:100%;
+    margin:auto;
   }
 }
 
