--- a/src/sass/nav.module.scss
+++ b/src/sass/nav.module.scss
@@ -1,11 +1,24 @@
+@import 'variables';
+
 .nav {
+  position:relative;
   text-align: left;
   margin-top:5rem;
+
+  @media screen and (max-width: #{$tablet_width}px) {
+    margin-top:0;
+  }
 
   ul {
     list-style-type: none;
     padding: 0;
     margin:0;
+
+    @media screen and (max-width: #{$tablet_width}px) {
+      position: absolute;
+      right:0;
+      bottom:-100%;
+    }
   }
 
   li {
@@ -17,9 +30,11 @@
     font-size: 1.3rem;
     font-weight: 800;
 
-    &.selected, &:hover {
+    &.selected, &:hover, &:focus {
       cursor:pointer;
       text-decoration: underline;
     }
   }
+
+
 }
