--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,9 @@
+@import 'variables';
+
+* {
+  box-sizing:border-box;
+}
+
 body {
   margin: 0;
   font-family: 'Antic Didone', serif, -apple-system;
@@ -24,15 +30,34 @@ h4 {
   max-width:1200px;
   margin:30px auto;
   width:75%;
+
+  @media screen and (max-width: #{$tablet_width}px) {
+    display:block;
+    width:100%;
+    padding:30px;
+    margin:0;
+  }
+
+  @media screen and (max-width: #{$mobile_width}px) {
+    padding:15px;
+  }
 }
 
 .column-left {
   flex:1 1 300px;
+
+  @media screen and (max-width: #{$tablet_width}px) {
+    margin-bottom:30px;
+  }
 }
 
 .column-right {
   flex:1 3 70%;
   max-width: 70%;
+
+  @media screen and (max-width: #{$tablet_width}px) {
+    max-width:100%;
+  }
 }
 
 @import 'modal'
