--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -2,8 +2,8 @@
 .modal {
   display:flex;
   position:fixed;
-  height:100vh;
-  width:100vw;
+  height:100%;
+  width:100%;
   z-index:9999;
   top:0;
   left:0;
@@ -54,4 +54,11 @@
   padding: 0;
   position: absolute;
   width: 1px;
+}
+
+body.is-locked {
+  position:absolute;
+  height:100vh;
+  width:100vw;
+  overflow:hidden;
 }
